--- a/tamplate.html
+++ b/tamplate.html
@@ -67,9 +67,18 @@ $endif$
 $body$
 </div>
 
+
 $for(include-after)$
 $include-after$
 $endfor$
+
+<div class="foot">
+  <ul>
+    <li>
+      <a href="https://github.com/mcti-sefip/NLP-MCTI-PPF">
+        <img src="img/github-mark.png" alt="GITHUB">
+      </a>
+  </ul>
 
 </body>
 
